# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
page_loader/: page_loader.py  parser.py
page_loader/scripts/: page_loader.py
tests/: test_download.py  test_exceptions.py  test_page_loader.py
tests/fixtures/: expected.html  test.html
