[tool.poetry]
name = "hexlet-code"
version = "0.3.2"
description = ""
authors = ["Artem Marhaza <artemmrgz@gmail.com>"]
packages = [
 { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pytest-cov = "^2.12.1"
requests-mock = "^1.9.3"
pytest = "^6.2.4"
pyfakefs = "^4.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(levelname)s: %(message)s"
